fixed spacing issue

--- a/WebContent/css/admin/admin.scss
+++ b/WebContent/css/admin/admin.scss
@@ -87,6 +87,10 @@ button {
 	height: 300px;
 }
 
+#frozenDesc {
+	padding-bottom: 10px;
+}
+
 p {
 	clear: both;
 }
